syntax = "proto3";
package schedule;
option go_package = "/schedulepb";

service Scheduler {
  rpc AddSchedule (ScheduleRequest) returns (ScheduleResponse);
  rpc ListSchedules (Empty) returns (ScheduleList);
  rpc DeleteSchedule (ScheduleIdx) returns (ScheduleResponse);
}

message ScheduleRequest {
  string id = 1;
  string title = 2;
  string datetime = 3;
  string url = 4;
  string memo = 5;
}

message ScheduleIdx {
  int32 idx = 1;
}

message ScheduleList {
  repeated ScheduleRequest schedules = 1;
}

message ScheduleResponse {
  string message = 1;
}

message Empty {}